<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" android:background="#90beeb"
app:layout_behavior="@string/appbar_scrolling_view_behavior"

tools:context="com.example.raphael.projeto_tcc.activity_linhas">


    <TextView android:id="@+id/txtSOMENTE_CARTAO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SOMENTE_CARTAO"
        android:layout_below="@+id/txtCATEGORIA_SERVICO"
        android:layout_alignLeft="@+id/txtCATEGORIA_SERVICO"
        android:layout_alignStart="@+id/txtCATEGORIA_SERVICO"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView android:id="@+id/txtCATEGORIA_SERVICO"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:text="@string/CATEGORIA_SERVICO"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/buttonCheckIn"
        android:layout_alignRight="@+id/btnHorario"
        android:layout_alignEnd="@+id/btnHorario" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Horários da Linha"
        android:id="@+id/btnHorario"
        android:layout_gravity="center_vertical"
        android:onClick="startHorarioLinhas"
        android:layout_alignTop="@+id/buttonCheckIn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mapa da Linha"
        android:onClick="startCheckIn"
        android:layout_below="@+id/txtCATEGORIA_SERVICO"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="99dp" />


    <Button
        android:id="@+id/buttonOnibus"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:text=" Informações do Ônibus"
        android:onClick="todosOnibus"
        android:layout_gravity="center_horizontal"
        android:background="#7595f8"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtCOD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/COD"
        android:layout_alignLeft="@+id/txtSOMENTE_CARTAO"
        android:layout_alignStart="@+id/txtSOMENTE_CARTAO"
        android:layout_below="@+id/txtSOMENTE_CARTAO"
        android:layout_alignRight="@+id/btnHorario"
        android:layout_alignEnd="@+id/btnHorario" />

    <TextView
        android:id="@+id/txtNOME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NOME"
        android:layout_below="@+id/txtCOD"
        android:layout_alignLeft="@+id/txtCOD"
        android:layout_alignStart="@+id/txtCOD"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria Serviço: "
        android:id="@+id/textView2"
        android:layout_above="@+id/buttonCheckIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Somente Cartão? "
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Códico da linha: "
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome: "
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>


